--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,8 @@
-server.servlet.context-path=/api
-server.port=80
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-spring.liquibase.change-log=classpath:liquibase/master.changelog.xml
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:recipedb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
